--- a/app/src/main/res/layout/activity_edit_account_employee.xml
+++ b/app/src/main/res/layout/activity_edit_account_employee.xml
@@ -159,7 +159,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/EditAccountEmployeePassword" />
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/textInputEditText"
+                android:id="@+id/EditAccountEmployeeName"
                 android:layout_width="326dp"
                 android:layout_height="56dp"
                 android:hint="Name"
@@ -180,17 +180,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.096"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />
+                app:layout_constraintTop_toBottomOf="@+id/EditAccountEmployeeName" />
 
             <EditText
-                android:id="@+id/editTextText"
+                android:id="@+id/EditAccountEmployeeAddress"
                 android:layout_width="328dp"
                 android:layout_height="59dp"
                 android:layout_marginTop="8dp"
                 android:ems="10"
                 android:inputType="text"
                 android:text="Address"
-                app:layout_constraintEnd_toEndOf="@+id/textInputEditText"
+                app:layout_constraintEnd_toEndOf="@+id/EditAccountEmployeeName"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/textView74"
                 app:layout_constraintTop_toBottomOf="@+id/textView74" />
