--- a/app/src/main/res/layout/activity_edit_req_work_experience.xml
+++ b/app/src/main/res/layout/activity_edit_req_work_experience.xml
@@ -57,7 +57,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/backbuttonEditReqWorkExp"
         android:layout_width="129dp"
         android:layout_height="56dp"
         android:text="BACK"
