--- a/app/src/main/res/layout/activity_show_application_details.xml
+++ b/app/src/main/res/layout/activity_show_application_details.xml
@@ -24,12 +24,13 @@
                 android:id="@+id/textView69"
                 android:layout_width="320dp"
                 android:layout_height="51dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="60dp"
                 android:text="Application Details"
                 android:textAlignment="center"
                 android:textSize="34sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.494"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -301,6 +302,19 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/btnShowApplicationDetailsAccept"
                 app:layout_constraintTop_toBottomOf="@+id/btnShowApplicationDetailsAccept" />
+
+            <Button
+                android:id="@+id/backbuttonShowApplicationDetails"
+                android:layout_width="120dp"
+                android:layout_height="53dp"
+                android:text="BACK"
+                app:icon="@android:drawable/ic_menu_revert"
+                app:layout_constraintBottom_toTopOf="@+id/textView69"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.064"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
