polishing details and completing tests 2

--- a/app/src/main/res/layout/activity_show_applications_employee.xml
+++ b/app/src/main/res/layout/activity_show_applications_employee.xml
@@ -7,14 +7,18 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewEditAccountEmployee"
-        android:layout_width="371dp"
-        android:layout_height="340dp"
+        android:layout_width="396dp"
+        android:layout_height="416dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView69"
-        tools:itemCount="10" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:itemCount="2" />
 
     <TextView
         android:id="@+id/textView69"
